# mcp-adjutant

./: .gitignore  ADJUTANT_BACKLOG.md  AGENTS.md  Cargo.toml  README.md
.cursor/: mcp.json
.cursor/rules/: codegraph.mdc  fastcontext.mdc
.fastcontext/: trajectory_2026-07-10-155954.jsonl  trajectory_2026-07-10-160052.jsonl  trajectory_2026-07-10-171123.jsonl  trajectory_2026-07-10-200527.jsonl
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: download-embedding-fixtures.sh  mock_web_server.py  run_log_fixture_batch.py  run_log_fixture_batch_v2.py  scout_battery.py  scout_battery_20.py  web_fetch_battery.py  web_fetch_battery_set2.py
src/: cache.rs  config_server.rs  domain.rs  error.rs  jobs.rs  lib.rs  mcp_server.rs  mutation_journal.rs  storage.rs
src/agent/: builder.rs  builder_prompt.rs  evaluator.rs  log_analyzer.rs  mod.rs  orchestrator.rs  read_only_tools.rs  report.rs  scout.rs  text_pruner_mock.rs  traits.rs  transformer.rs  triage.rs  web_fetcher.rs
src/cache/: agent_names.rs  embedding.rs  file_state.rs  inspect.rs  manager.rs  mod.rs  project.rs
src/llm/: deepseek.rs  factory.rs  mod.rs  openai_compatible.rs  preflight.rs  request.rs  tools.rs  traits.rs  types.rs
tests/: agent_loop_tests.rs  babysitter_agent_tests.rs  babysitter_tools_unit_test.rs  branch_gate_integration_test.rs  builder_agent_tests.rs  cache_inspect_api_test.rs  cache_manager_integration_test.rs  cache_manager_tests.rs  cache_project_integration_test.rs  config_storage.rs  conventions_integration_test.rs  crash_log_report_integration_test.rs  crash_log_tests.rs  docs_tests.rs  domain_unit_test.rs  embedding_integration_test.rs  evaluator_tests.rs  github_unit_test.rs  jobs_unit_test.rs  manager_integration_test.rs  mcp_handlers_tests.rs  mcp_handlers_unit_test.rs  planner_golden_blueprint_test.rs  project_cache_manager_integration_test.rs  scout_agent_tests.rs  scout_cache_tests.rs  scout_format_integration_test.rs  scout_live_eval.rs  scout_tools_tests.rs  semantic_graph_tests.rs  storage_unit_test.rs  tools_parsing_integration_test.rs  transformer_tests.rs  transpiler_agent_tests.rs  transpiler_agent_unit_test.rs  transpiler_tools_unit_test.rs  triage_agent_tests.rs  web_fetcher_cache_tests.rs  web_fetcher_tests.rs
(+106 files in other folders)
