[package]
name = "mcp-adjutant"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytemuck = { version = "1.16", features = ["derive"] }
home = "=0.5.9"
ndarray = "0.16"
ort = "=2.0.0-rc.9"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokenizers = { version = "0.19", features = ["onig"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tree-sitter = "0.24.7"
tree-sitter-rust = "0.23.2"
tree-sitter-typescript = "0.23.2"
streaming-iterator = "0.1.9"
ureq = { version = "2.12", features = ["json"] }
